# Copy_YourSelf

./: .gitignore  Cargo.toml  README.md  Test_Learning.py  Test_Learning_Multi.py  WB_test_connect.py  config.yaml  log.txt  main.py  main.rs  multi_Lerning.py  requirements.txt  server.py  setup.py  test.py  tools.py  windows_insteller.iss  引継ぎ用ファイル.yaml
.github/workflows/: debug.yml
Docker/: How_to_Build.md  NVIDIA_GPU.dockerfile  Start_command.md  cpu.dockerfile  intel_GPU.dockerfile
Docker環境構築/: NVIDIA_GPU.dockerfile  WSL_port.ps1  XPU_RUN.sh  build.sh  cpu.dockerfile  install.sh  intel_GPU.dockerfile  run.sh  起動コマンド.txt  起動メモ.txt
Multi_Learning_Client/: main.py
Preprocessing/: AI_running.py  Learning.py  Word2Vec_Learning.py  analysis.py  word2vec.model.syn1neg.npy  word2vec.model.wv.vectors.npy
RNN/: text_generation.py
inference/: RNN.py
install/: How_to_Build.md
install/Docker/: NVIDIA_GPU.dockerfile  intel_GPU.dockerfile
install/conda/: cuda-linux.yml  cuda-win.yml  cuda.yml  directML.yml  metal.yml
src/: Learning.py  Learning_test.py  __init__.py  app.rs  client.py  command_line.rs  function_run.rs  main.py  main.rs  post.py  reply_test.py  test.py  tools.rs
src/Error/: General_Error.py
src/Preprocessing/: Word2Vec.py  Word2Vec_Learning.py  analysis.py  token.py
static/: index.html  redirect.html  script.js  styles.css
training_checkpoints/: ckpt_1.index  ckpt_10.index  ckpt_2.index  ckpt_3.index  ckpt_4.index  ckpt_5.index  ckpt_6.index  ckpt_7.index  ckpt_8.index  ckpt_9.index
設定ファイル/: copy-yourself-a3cc232df672.json  log_config.json
(+3 files in other folders)
