[package]
name = "copy_your_self"
version = "0.1.0"
edition = "2021"


[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
getopts = "0.2"
once_cell = "1.8"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.11.3"