[package]
name = "copy_your_self"
version = "0.1.0"
edition = "2021"

[dependencies]
getopts = "0.2"
once_cell = "1.8"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.11.3"
lazy_static = "1.4.0"
serde_json = "1.0"

[dependencies.mecab]
git = "https://github.com/tsurai/mecab-rs"